--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.0.236",
+    "@types/node": "^20.8.6",
     "typescript": "^5.0.4"
   }
 }
