chore: move to bun

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "View instagram stories anonymously",
   "main": "index.ts",
   "scripts": {
-    "build": "yarn tsc index.ts --outDir dist"
+    "build": "bun build index.ts --outdir dist"
   },
   "author": "Dale Larroder",
   "license": "ISC",
